--- a/application.yml
+++ b/application.yml
@@ -32,6 +32,10 @@ spring:
       password: springboot
   thymeleaf:
     cache: false
+    
+board:
+  upload:
+    dir: images
 
 ---
 spring:
@@ -44,3 +48,8 @@ spring:
       jdbc-url: jdbc:log4jdbc:mysql://146.56.97.84:3306/insight?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
       username: root
       password: springboot
+
+ board:
+  upload:
+    dir: /home/opc/src/board/images
+    
